--- a/app/views/projects/_todo.html.erb
+++ b/app/views/projects/_todo.html.erb
@@ -4,6 +4,7 @@
   </div>
   <div class="col-sm-10">
     <%= text_field_tag "project[todos_attributes][][title]", "", class: 'form-control' %>
+    <%= hidden_field_tag "project[todos_attributes][][creator_id]", current_user.id, class: 'form-control' %>
   </div>
 </div>
 
