--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -31,7 +31,12 @@
           </tbody>
         <% end %>
         <tfoot>
-          <td colspan="3"><%= submit_tag "Update", class: 'btn btn-primary' %></td>
+          <!-- <td></td> -->
+          <td colspan="3">
+            <%= submit_tag "Update", class: 'btn btn-primary' %>
+            <%= link_to t('.back', :default => t("helpers.links.back")),
+              projects_path, :class => 'btn btn-default'  %>
+          </td>
         </tfoot>
       <% end %>
     </table>
@@ -40,7 +45,6 @@
 
 <div class="row">
   <div class="col-sm-12">
-    <%= link_to t('.back', :default => t("helpers.links.back")),
-              projects_path, :class => 'btn btn-default'  %>
+    
   </div>
 </div>
